--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^6.9.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.180.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "three": "^0.180.0",
+    "three-stdlib": "^2.28.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
