--- a/backend/.env
+++ b/backend/.env
@@ -6,21 +6,21 @@ NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
 
 # JWT Secret (change this in production!)
-JWT_SECRET=nasa_space_hackathon_ml_secret_2024
+JWT_SECRET=your_super_secret_jwt_key_here
 
 # ML Model API Configuration
 ML_API_BASE_URL=http://localhost:8000
-ML_API_KEY=
+ML_API_KEY=your_ml_api_key_here
 
 # PostgreSQL Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=nasa_hackathon
 DB_USER=postgres
-DB_PASSWORD=password
+DB_PASSWORD=duckmysih
 
 # Database URL (alternative to individual settings)
-DATABASE_URL=postgresql://postgres:password@localhost:5432/nasa_hackathon
+DATABASE_URL=postgresql://postgres:duckmysih@localhost:5432/nasa_hackathon
 
 # File Upload Configuration
 MAX_FILE_SIZE=52428800
