--- a/backend/.env
+++ b/backend/.env
@@ -1,35 +1,13 @@
-# Server Configuration
+# Gemini AI Configuration
+GEMINI_API_KEY=AIzaSyDjxUzJ6sod7d9QvOoJ8WcQn4r9YF5Iyws
+
+# Existing variables (keep these)
 PORT=5000
 NODE_ENV=development
-
-# Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:3000
-
-# JWT Secret (change this in production!)
-JWT_SECRET=your_super_secret_jwt_key_here
-
-# ML Model API Configuration
-ML_API_BASE_URL=http://localhost:8000
-ML_API_KEY=your_ml_api_key_here
-
-# PostgreSQL Database Configuration
+JWT_SECRET=your_super_secret_jwt_key_2024
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=nasa_hackathon
 DB_USER=postgres
 DB_PASSWORD=duckmysih
-
-# Database URL (alternative to individual settings)
-DATABASE_URL=postgresql://postgres:duckmysih@localhost:5432/nasa_hackathon
-
-# File Upload Configuration
-MAX_FILE_SIZE=52428800
-UPLOAD_DIR=uploads
-
-# Security Configuration
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# Logging Configuration
-LOG_LEVEL=info
-LOG_FILE=logs/backend.log
