--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon server.js",
     "test": "jest --experimental-modules",
     "migrate": "node scripts/migrate.js",
-    "migrate-experiments": "node scripts/migrate-experiments.js"
+    "migrate-experiments": "node scripts/migrate-experiments.js",
+    "test-db": "node scripts/test-db-connection.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
