Update sensitive information in .env file
Updated API key and database password in .env file.

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Gemini AI Configuration
-GEMINI_API_KEY=AIzaSyCkm8Oolvkm5B-8quM_NT4VOxwQd2e_rWk
+GEMINI_API_KEY="get your own!!!"
 
 # Existing variables (keep these)
 PORT=5000
@@ -10,4 +10,4 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=nasa_hackathon
 DB_USER=postgres
-DB_PASSWORD=duckmysih
+DB_PASSWORD=password
