--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@types/three": "^0.180.0",
+    "axios": "^1.6.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
+    "react-force-graph-2d": "^1.29.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "three": "^0.180.0",
-    "three-stdlib": "^2.28.0",
-    "axios": "^1.6.0"
+    "three-stdlib": "^2.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
