--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "test-db": "node scripts/test-db-connection.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
