API and frontend url update

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ REACT_APP_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXB
 
 # API Configuration
 # Backend API URL (default is localhost:5000 for development)
-REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_API_URL=https://biospace-archive-backend.onrender.com
 
 # Environment
 NODE_ENV=development
