--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://nasa-space-hackathon-frontend.onrender.com
 
 # Gemini AI Configuration
 GEMINI_API_KEY=
@@ -16,6 +16,6 @@ SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 
 # Application Configuration
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://nasa-space-hackathon-frontend.onrender.com
 JWT_SECRET= 
 
