--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
